--- a/babasport-service-product/src/main/webapp/WEB-INF/web.xml
+++ b/babasport-service-product/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- 初始化配置文件的位置 -->
+  <context-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:application-context.xml</param-value>
+  </context-param>
+  <!-- spring的监听器 -->
+  <listener>
+      <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
 </web-app>
