--- a/babasport-console/src/main/webapp/WEB-INF/web.xml
+++ b/babasport-console/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,21 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- springmvc的前端控制器 -->
+  <servlet>
+      <servlet-name>babasport-console</servlet-name>
+      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+      <!-- 配置springmvc初始化配置文件的位置 -->
+      <init-param>
+          <param-name>contextConfigLocation</param-name>
+          <param-value>classpath:springmvc-console.xml</param-value>
+      </init-param>
+      <!-- 服务器启动就加载 -->
+      <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>babasport-console</servlet-name>
+      <url-pattern>*.do</url-pattern>  
+  </servlet-mapping>
 </web-app>
